[package]
name = "model"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arraystring = "0.3.0"
rayon = "1.10.0"
rand = "0.8.5"
parking_lot = "0.12.3"
strsim = "0.11.1"
triple_accel = "*"
indexmap = "2.2.6"
