[package]
name = "pull_umis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
clap = {version = "4.5.4", features = ["derive"]}
indexmap = {version = "2.2.6", features = ["rayon"]}
polars = {version = "x", features = ["csv", "lazy"]}
strsim = "0.11.1"
rayon = "1.10.0"
itertools = "0.13.0"
rand = "0.8.5"
